--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ body {
   line-height: 1.625em;
   position: relative;
 }
-body p{ font-size:28px !important;}
+body p{ font-size:25px ;}
 ol, ul {
   margin: 0;
   padding: 0;
@@ -2256,7 +2256,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .about-area .primary-btn2:hover {
   color: #fff;
-  
+
 
 }
 
@@ -2779,5 +2779,5 @@ h6 {
 }
 
 .width-100{
-  width:100%
+  width:70%
 }
