--- a/css/main.css
+++ b/css/main.css
@@ -801,6 +801,7 @@ h6 {
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1.5em;
+  padding-bottom: 20px;
 }
 
 .typography h1, .typography h2, .typography h3, .typography h4, .typography h5, .typography h6 {
