--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,6 @@
   right: auto;
   max-width: 1500px;
   margin: auto;
-  /* border: 1px solid black; */
+  border: 1px solid black;
   height: 100vh;
 }
