--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
   left: auto;
   right: auto;
   max-width: 1500px;
+  min-width: 1000px;
   margin: auto;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 100vh;
 }
